wordpress-mariadb-ingress/nginx-ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

 name: wordpress-ingress
 namespace: helm-playground

 annotations:

   nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:

 rules:

 - http:

     paths:

     - pathType: Prefix

       path: /wordpress

       backend:

         service:

           name: wordpress-service

           port:

             number: 8080
